Add Starter and Enterprise pricing plans
Added new pricing tiers for Starter and Enterprise plans, including features and pricing details.

--- a/index.html
+++ b/index.html
@@ -307,7 +307,72 @@
   <h2 class="section-title">No Commission. No Contracts.<br>Just a Flat Monthly Fee.</h2>
   <div class="pricing-note"><strong>You don't pay anything today.</strong> These are the plans available when we launch. Register now to lock in launch pricing for 6 months — it goes up after that.</div>
   <div class="pricing-grid">
-    <div class="price-card featured"><div class="popular-tag">Most Popular</div><h3>Pro</h3><p class="tier-desc">Stand out from the crowd and actively grow your buyer base.</p><span class="price-was">£299.99/month</span><div class="price-row"><span class="price-amount">£149.99</span><span class="price-period">/month</span></div><span class="price-lock">🔒 Launch price locked for 6 months</span><a href="#signup" class="btn-gradient" style="width:100%;margin-bottom:0.5rem;">Register Interest</a><p class="pay-note">No payment taken today</p><ul class="feature-list"><li><span class="tick">✓</span> Everything in Starter</li><li><span class="tick">✓</span> Featured placement in search</li><li><span class="tick">✓</span> Full analytics dashboard</li><li><span class="tick">✓</span> Category spotlight</li><li><span class="tick">✓</span> Priority support</li><li><span class="tick">✓</span> Google listing</li><li><span class="tick">✓</span> Meta advertising included</li><li><span class="tick">✓</span> Push notifications (up to 50/mo)</li><li class="disabled"><span class="cross">✗</span> Multi-location support</li><li class="disabled"><span class="cross">✗</span> Dedicated account manager</li><li class="disabled"><span class="cross">✗</span> Co-marketing opportunities</li></ul></div>
+    <div class="price-card">
+      <h3>Starter</h3>
+      <p class="tier-desc">Get found by buyers and start growing your visibility.</p>
+      <span class="price-was">£199.99/month</span>
+      <div class="price-row"><span class="price-amount">£99.99</span><span class="price-period">/month</span></div>
+      <span class="price-lock">🔒 Launch price locked for 6 months</span>
+      <a href="#signup" class="btn-ghost" style="width:100%;margin-bottom:0.5rem;">Register Interest</a>
+      <p class="pay-note">No payment taken today</p>
+      <ul class="feature-list">
+        <li><span class="tick">✓</span> Full auction house profile</li>
+        <li><span class="tick">✓</span> Logo, photos &amp; description</li>
+        <li><span class="tick">✓</span> Upcoming sale calendar</li>
+        <li><span class="tick">✓</span> Direct link to your website</li>
+        <li><span class="tick">✓</span> Unlimited auction types</li>
+        <li><span class="tick">✓</span> Basic monthly stats</li>
+        <li><span class="tick">✓</span> "Verified Auctioneer" badge</li>
+        <li><span class="tick">✓</span> Push notifications (up to 20/mo)</li>
+        <li class="disabled"><span class="cross">✗</span> Google listing</li>
+        <li class="disabled"><span class="cross">✗</span> Meta advertising</li>
+        <li class="disabled"><span class="cross">✗</span> Featured placement</li>
+        <li class="disabled"><span class="cross">✗</span> Full analytics dashboard</li>
+      </ul>
+    </div>
+    <div class="price-card featured">
+      <div class="popular-tag">Most Popular</div>
+      <h3>Pro</h3>
+      <p class="tier-desc">Stand out from the crowd and actively grow your buyer base.</p>
+      <span class="price-was">£299.99/month</span>
+      <div class="price-row"><span class="price-amount">£149.99</span><span class="price-period">/month</span></div>
+      <span class="price-lock">🔒 Launch price locked for 6 months</span>
+      <a href="#signup" class="btn-gradient" style="width:100%;margin-bottom:0.5rem;">Register Interest</a>
+      <p class="pay-note">No payment taken today</p>
+      <ul class="feature-list">
+        <li><span class="tick">✓</span> Everything in Starter</li>
+        <li><span class="tick">✓</span> Featured placement in search</li>
+        <li><span class="tick">✓</span> Full analytics dashboard</li>
+        <li><span class="tick">✓</span> Category spotlight</li>
+        <li><span class="tick">✓</span> Priority support</li>
+        <li><span class="tick">✓</span> Google listing</li>
+        <li><span class="tick">✓</span> Meta advertising</li>
+        <li><span class="tick">✓</span> Push notifications (up to 50/mo)</li>
+        <li class="disabled"><span class="cross">✗</span> Multi-location support</li>
+        <li class="disabled"><span class="cross">✗</span> Dedicated account manager</li>
+        <li class="disabled"><span class="cross">✗</span> Co-marketing opportunities</li>
+      </ul>
+    </div>
+    <div class="price-card">
+      <h3>Enterprise</h3>
+      <p class="tier-desc">For auction groups with multiple salerooms wanting the full package.</p>
+      <span class="price-was">£399.99/month</span>
+      <div class="price-row"><span class="price-amount">£199.99</span><span class="price-period">/month</span></div>
+      <span class="price-lock">🔒 Launch price locked for 6 months</span>
+      <a href="#signup" class="btn-ghost" style="width:100%;margin-bottom:0.5rem;">Register Interest</a>
+      <p class="pay-note">No payment taken today</p>
+      <ul class="feature-list">
+        <li><span class="tick">✓</span> Everything in Pro</li>
+        <li><span class="tick">✓</span> Multi-location support</li>
+        <li><span class="tick">✓</span> Dedicated account manager</li>
+        <li><span class="tick">✓</span> Co-marketing &amp; newsletter features</li>
+        <li><span class="tick">✓</span> Early access to bidding platform</li>
+        <li><span class="tick">✓</span> Google listing</li>
+        <li><span class="tick">✓</span> Meta advertising</li>
+        <li><span class="tick">✓</span> Push notifications (up to 100/mo)</li>
+        <li><span class="tick">✓</span> Quarterly performance reviews</li>
+      </ul>
+    </div>
   </div>
   <div class="trust-strip">
     <div class="trust-item"><span class="ti">🚫</span> No commission</div>
